Made search blurbs more visible:  bug 1233

--- a/cpath/web/jsp/css/andreas08.css
+++ b/cpath/web/jsp/css/andreas08.css
@@ -445,7 +445,7 @@ cursor:pointer;
 
 .search_fragment {
     font-size:85%;
-    color:#999999;
+    color:black;
     line-height:1.2em;
     margin-top:5px;
     margin-bottom:10px;
